--- a/myBBS/operation/src/main/resources/static/index.html
+++ b/myBBS/operation/src/main/resources/static/index.html
@@ -5,6 +5,33 @@
     <title>操作页面</title>
 </head>
 <body>
-<h1>欢迎来到 myBBS !</h1>
+<div id="app">
+    <h1>{{name}}欢迎来到 myBBS !</h1>
+
+    <a href="write.html"><h1>写操作</h1></a>
+    <h1>读操作</h1>
+</div>
 </body>
+<script src="js/axios.js"></script>
+<script src="js/util.js"></script>
+<script src="js/all.js"></script>
+<script src="js/vue.js"></script>
+<script>
+    let vue = new Vue({
+        el: '#app',
+        data: {
+            name:""
+        },
+        //钩子函数，VUE对象初始化完成后自动执行
+        created() {
+            axios.get('/user/welcome').then(res=>{
+                if(res.data.flag){
+                    this.name=res.data.message;
+                }
+            })
+        },
+        methods: {
+        }
+    })
+</script>
 </html>
