排序 分页 查询文章 完成

--- a/myBBS/operation/src/main/resources/static/index.html
+++ b/myBBS/operation/src/main/resources/static/index.html
@@ -9,7 +9,7 @@
     <h1>{{name}}欢迎来到 myBBS !</h1>
 
     <a href="write.html"><h1>写操作</h1></a>
-    <h1>读操作</h1>
+    <a href="read.html"><h1>读操作</h1></a>
 </div>
 </body>
 <script src="js/axios.js"></script>
