--- a/myBBS/operation/src/main/resources/static/read.html
+++ b/myBBS/operation/src/main/resources/static/read.html
@@ -7,7 +7,7 @@
 <body>
 <div id="app">
     <h1>{{name}}欢迎来到 myBBS !</h1>
-    <button @click="findBycreatTime()">最新发布</button>     <button></button>
+    <button @click="findBycreatTime()">最新发布</button>     <button @click="findByWeight()">热门文章</button>  <button @click="findByMyLove()">我关注的作者排序</button>
     <div v-for="article in articleList">{{article.title}}    作者 {{article.userName}}    权重分{{article.weight}}   发布时间{{article.createDate}}</div>
 
 </div>
@@ -34,6 +34,20 @@
         methods: {
             findBycreatTime(){
                 axios.get('/read/findByCreateTime').then(res=>{
+                    if(res.data.flag){
+                        this.articleList=res.data.data;
+                    }
+                })
+            },
+            findByWeight(){
+                axios.get('/read/findByWeight').then(res=>{
+                    if(res.data.flag){
+                        this.articleList=res.data.data;
+                    }
+                })
+            },
+            findByMyLove(){
+                axios.get('/read/findByMyLove?username='+this.name).then(res=>{
                     if(res.data.flag){
                         this.articleList=res.data.data;
                     }
